<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.daniloosorio.myairplane.ui.tickets.TicketsFragment"
        android:label="@string/title_tickets"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.daniloosorio.myairplane.ui.carga.CargaFragment"
        android:label="@string/title_carga"
        tools:layout="@layout/fragment_carga" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.daniloosorio.myairplane.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />
</navigation>