<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    tools:context=".ui.carga.CargaFragment" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tv_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/carga"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_circular">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_del_pasajero" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_circular">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_peso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/peso_del_equipaje"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/bt_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_circular"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"
                android:text="@string/guardar" />

            <TextView
                android:id="@+id/tv_tittle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/descargar"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:id="@+id/tv_mensaje"
                android:background="@drawable/et_circular">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_del_pasajero" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tv_carga"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/et_circular"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
            <Button
                android:id="@+id/bt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_circular"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"
                android:text="@string/buscar" />
            <Button
                android:id="@+id/bt_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_circular"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"
                android:text="@string/retirar" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>